# harness-garnish-cl

./: Cargo.toml  Harness-Garnish-build-specification.md  README.md
crates/garnish-agents/: Cargo.toml
crates/garnish-agents/fixtures/: claude-stream.jsonl  codex-exec.jsonl
crates/garnish-agents/src/: lib.rs
crates/garnish-cli/: Cargo.toml
crates/garnish-cli/src/: daemon.rs  main.rs  runner.rs  web.rs
crates/garnish-cli/src/web/: index.html
crates/garnish-cli/tests/: api_agent.rs  backends.rs  daemon.rs  e2e.rs  handoff.rs  memory.rs  quota.rs  real_smoke.rs  web.rs
crates/garnish-core/: Cargo.toml
crates/garnish-core/migrations/: 0001_init.sql  0002_daemon.sql  0003_runs_adapter.sql  0004_memories.sql
crates/garnish-core/src/: db.rs  events.rs  ids.rs  lib.rs  model.rs  paths.rs  policy.rs  projections.rs  state.rs  store.rs
crates/garnish-exec/: Cargo.toml
crates/garnish-exec/src/: backend.rs  git.rs  lib.rs  spawn.rs  worktree.rs
crates/garnish-providers/: Cargo.toml
crates/garnish-providers/fixtures/: codexbar-usage-claude.json  prices.json
crates/garnish-providers/src/: lib.rs  model.rs  pricing.rs  quota.rs
docs/: TEST_PLAN.md  architecture.md  contracts.md  data-model.md  mvp-acceptance.md  policy-model.md  quota-reserves-and-forecasting.md  testing.md  threat-model.md
docs/adr/: ADR-0001-rust-control-plane.md  ADR-0002-execution-plane-hybrid.md  ADR-0003-quota-codexbar.md  ADR-0004-container-backends.md  ADR-0005-rejected-candidates.md  ADR-0006-sqlite-state.md  ADR-0007-mvp-scope-web-ux.md
