[workspace]
resolver = "2"
members = [
    "crates/garnish-core",
    "crates/garnish-exec",
    "crates/garnish-agents",
    "crates/garnish-providers",
    "crates/garnish-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "io-util", "sync", "macros", "fs", "signal"] }
ulid = "1"
ureq = { version = "2", features = ["json"] }
tempfile = "3"

[profile.release]
lto = true
strip = true
