[package]
name = "garnish-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "garnish"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
garnish-agents = { path = "../garnish-agents" }
garnish-core = { path = "../garnish-core" }
garnish-exec = { path = "../garnish-exec" }
garnish-providers = { path = "../garnish-providers" }
libc.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
