[package]
name = "garnish-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "garnish"
path = "src/main.rs"

# Deterministic test agent. Lives in this package so cargo guarantees it is
# built before this package's integration tests run (CARGO_BIN_EXE_fake-agent).
[[bin]]
name = "fake-agent"
path = "src/bin/fake_agent.rs"

# Minimal API/local-model tool loop, spawned by the runner like any CLI agent.
[[bin]]
name = "garnish-api-agent"
path = "src/bin/api_agent.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
garnish-agents = { path = "../garnish-agents" }
garnish-core = { path = "../garnish-core" }
garnish-exec = { path = "../garnish-exec" }
garnish-providers = { path = "../garnish-providers" }
libc.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
ureq.workspace = true
